fix bluprint grid alignment

--- a/assets/less/bluprint-grid.less
+++ b/assets/less/bluprint-grid.less
@@ -1,9 +1,6 @@
 .BluprintGrid {
   .flex-display;
-  .flex-direction(row);
-  .justify-content(flex-start);
   .flex-wrap(wrap);
-
-  margin: 24px auto;
-  max-width: 1152px;
+  .justify-content(flex-start);
+  .align-content(flex-start);
 }
